--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-06 17:37:41
+lastsearch = 2024-08-06 18:27:00
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -49,7 +49,7 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -140.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOoqwOFohPjozPD4nxuQTQoBmnJvYAOS0eyEOkxrSCUsjq9arxw_G
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [thegioidemonline.com]
 match = -40.0%%
