--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-06 17:21:17
+lastsearch = 2024-08-06 18:26:39
 
 [shopee.vn]
 match = -8.3%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359?srsltid=AfmBOoq5gDc2ko6Fn_Xr1d5fb0voheM0csmmJz3C-EOCN6w-vHN1wcaw
+url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -83.3%%
-title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
-url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html?srsltid=AfmBOooZUw1FMz4W6UoNOT89ZtcuR6Uv2CYLGKXKNUjeCEwvoYr5msb-
+match = -75.0%%
+title = Thảm lau chân, thảm lau bàn chân siêu len mịn thấm hút ...
+url = https://www.lazada.vn/products/tham-lau-chan-tham-lau-ban-chan-sieu-len-min-tham-hut-va-mem-mai-size-40x60-i2386245794.html
 
 [megahomevietnam.com]
 match = 20.0%%
