--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-06 13:50:13
+lastsearch = 2024-08-06 18:27:21
 
 [www.diepxuan.com]
 match = 27.3%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOop7lV3-8aOCP7-MqqJKIV0dvkUjVHQwUPrmfAGY6Dz5ofzsnIZi
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html?srsltid=AfmBOorIEbCUoxEp05GjKuZ3c1Nb0ejkxthowpS7IIEi1kjnvSmzAnfO
 
 [www.lazada.vn]
 match = -13.6%%
 title = Thảm trải giường cao cấp 1m6x2m và 1m8x2m
-url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-1m6x2m-va-1m8x2m-i1537276656.html
+url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-1m6x2m-va-1m8x2m-i1537276656.html?srsltid=AfmBOorsP9gnsM9Qjh4nYW9l8IHymvwnUV3Ki0TKBoCQ1u8LuQKZvGP_
 
 [www.sendo.vn]
 match = 4.5%%
@@ -69,7 +69,7 @@ url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuo
 [jysk.vn]
 match = -63.6%%
 title = Bed frame HASLEV 160x200 dark grey - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey
+url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey?srsltid=AfmBOorYoMOclsaBRPh8-DlfhhaFklMIvGof2LcZQHkGSh7xN5MCq7Mc
 
 [blanc.vn]
 match = 13.6%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
-match = -50.0%%
-title = Furniture & Decoration - Decosy Vietnam
+match = 4.5%%
+title = Furniture & Decoration
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [maybedding.vn]
