--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-06 18:18:51
+lastsearch = 2024-08-06 18:55:34
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -210,4 +210,9 @@ url = https://www.customs.gov.vn/
 match = -75.0%%
 title = Mạnh tay xử lý kinh doanh đa cấp biến tướng, lừa đảo
 url = https://baochinhphu.vn/manh-tay-xu-ly-kinh-doanh-da-cap-bien-tuong-lua-dao-102240227130942022.htm
+
+[dawaco.com.vn]
+match = -8.3%%
+title = Dawaco – Vì cuộc sống chất lượng hơn
+url = https://dawaco.com.vn/
 
