--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-06 16:39:57
+lastsearch = 2024-08-06 18:49:21
 
 [www.youtube.com]
 match = -420.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -370.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
-url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
+match = -390.0%%
+title = Ren - Coming up to 14 years of living with a chronic...
+url = https://www.facebook.com/renmakesmusic/posts/coming-up-to-14-years-of-living-with-a-chronic-illnessi-always-said-if-i-ever-ha/913039023526946/
 
 [books.google.com]
 match = -460.0%%
