--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-06 18:51:46
+lastsearch = 2024-08-06 21:54:10
 
 [changagoidemsonghong.com]
 match = -55.6%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOooLJDyWTq0NR7gQ7ggCvC2OweXW4cerEUZWbgIp5qt562xuOHS6
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Sateen-Mịn-Decor-Bo-Chun-10
 [lynconcept.com]
 match = -25.9%%
 title = Bộ Chăn Ga Gối Cotton 100%% Hàn Quốc In Hình Hoa Nhỏ ...
-url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16
+url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16?srsltid=AfmBOoqyH1nIQmOWBR0ixlmGjS26ZbKT-xBhOsv9mgAgqRTyFQQbr348
 
 [changagoidemsonghong.online]
 match = -7.4%%
