--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-06 20:42:08
+lastsearch = 2024-08-06 21:44:30
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -37,9 +37,9 @@ title = Chăn lông tuyết muji mềm mại 2 lớp xuất nhật loại ...
 url = https://h5.lazada.vn/products/chan-long-tuyet-muji-mem-mai-2-lop-xuat-nhat-loai-long-mem-kich-thuoc-2mx2m3-nang-19kg-i1972993216.html
 
 [russo.vn]
-match = -207.1%%
-title = Những mẫu Chăn Muji thương hiệu hàng đầu của Nhật Bản
-url = https://russo.vn/nhung-mau-chan-muji-thuong-hieu-hang-dau-cua-nhat-ban/
+match = -178.6%%
+title = Chăn Blanket chính hãng tốt nhất hiện nay - Russo
+url = https://russo.vn/chan-long-tho-muji-4kg/
 
 [coda.io]
 match = -164.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOopWiX-C7DNcZ78N3d6X2kMNLTkuNDIgALCwJvy8q29h-5PuXjn9
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoroaQ8hEUvE0b1uBLBQEEI2WsSTCcunvwXP20bp5C4jrWPZk9P1
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
