--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-06 17:29:16
+lastsearch = 2024-08-06 21:57:37
 
 [demxanh.com]
 match = -14.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -130,4 +130,9 @@ url = https://meoi.com.vn/products/chieu-dieu-hoa-kem-goi-ca-rot-hong
 match = -25.9%%
 title = TOP 10+ Chiếu Điều Hòa Ưa Chuộng Mẫu Mới ... - easy dream
 url = https://easydream.vn/chieu-dieu-hoa-37-11.html
+
+[spacet.vn]
+match = -40.7%%
+title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
