--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-06 20:27:49
+lastsearch = 2024-08-06 21:57:16
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = 37.5%%
-title = Việc Làm San Jose
-url = https://www.facebook.com/groups/1299953646765352/
+match = -81.2%%
+title = CLB Bóng Đá Bà Rịa Vũng Tàu | Ba Ria
+url = https://www.facebook.com/CLBbongdaBRVT/
 
 [www.cgv.vn]
 match = -143.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -200.0%%
-title = Mở cống, chính thức đón con nước nổi tràn đồng ở đầu nguồn
-url = https://www.youtube.com/watch?v=hqobzp1RDw4
+match = -181.2%%
+title = CUỘC THI TIỂU THẦN TOÁN 2024: TÀI NĂNG TỎA SÁNG TẠI ...
+url = https://www.youtube.com/watch?v=iGW6EmCVobY
 
 [books.google.com]
 match = -156.2%%
@@ -197,9 +197,9 @@ title = Lễ tốt nghiệp đặc biệt của những học sinh TH School ...
 url = https://vov1.vov.gov.vn/thoi-su-21h30/le-tot-nghiep-dac-biet-cua-nhung-hoc-sinh-th-school-nam-hoc-2024-08062024-c29-116987.aspx
 
 [hanoimoi.vn]
-match = -200.0%%
-title = Việt Nam - Hàn Quốc kết nối giao thương về công nghệ ...
-url = https://hanoimoi.vn/viet-nam-han-quoc-ket-noi-giao-thuong-ve-cong-nghe-thong-tin-673757.html
+match = -181.2%%
+title = 36 tuyến buýt kết nối với tuyến đường sắt đô thị Nhổn
+url = https://hanoimoi.vn/36-tuyen-buyt-ket-noi-voi-tuyen-duong-sat-do-thi-nhon-ga-ha-noi-674069.html
 
 [suckhoedoisong.vn]
 match = -131.2%%
@@ -805,4 +805,9 @@ url = https://www.yellowpages.com.vn/categories/303355/spices_herbs_(ginger_turm
 match = -150.0%%
 title = Nội mạc tử cung dày bao nhiêu là dễ thụ thai nhất?
 url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-nhat-s74-n19392
+
+[hanoi.edu.vn]
+match = -218.8%%
+title = Giao lưu, trao đổi văn hóa và giáo dục Hà Nội - Fukuoka ...
+url = https://hanoi.edu.vn/tin-tuc-su-kien/giao-luu-trao-doi-van-hoa-va-giao-duc-ha-noi-fukuoka-lan-thu-6-nam-2024/ctfull/525/15537
 
