--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-06 21:16:10
+lastsearch = 2024-08-06 21:56:15
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOoqPSENprVQv-KahG7cRgLef_YBozaFkOZVnIc6n1njcc8cWhg0-
 
 [www.amazon.com]
 match = -91.7%%
