--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-06 20:32:17
+lastsearch = 2024-08-06 21:54:53
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -650,4 +650,14 @@ url = https://neon.vn/binh-hoa-dep-ve-vang-bat-trang-cao-cap-lh14.html
 match = -170.6%%
 title = Bật mí tips chọn các loại bình cắm hoa đẹp với từng loại hoa
 url = https://phedecor.com/tin-tuc/cac-loai-binh-cam-hoa.html
+
+[www.ag.idaho.gov]
+match = -29.4%%
+title = Idaho Open Meeting Law Manual
+url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
+
+[www.nimh.nih.gov]
+match = -164.7%%
+title = Depression - National Institute of Mental Health (NIMH)
+url = https://www.nimh.nih.gov/health/topics/depression
 
