--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-06 18:27:42
+lastsearch = 2024-08-06 21:49:40
 
 [nemgiakho.com]
 match = 8.6%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 8.6%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOooUB_n25jnn13mCikOhpDgsDErPmtbs578nN7YTYY0Yw3xASCbT
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
 
 [fefurniture.com.vn]
 match = 20.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 [demxanh.com]
 match = 11.4%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOopfRFC5p_g_u-KvYoBiWhdbloTgxLuTCmrFWGMxd9-MZ8gDOvDu
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [demcaosuliena.com]
 match = 48.0%%
