--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-06 20:47:29
+lastsearch = 2024-08-06 21:51:20
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://everonhn.com.vn/tam-trai-tien-ich-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOooNL2UidHws10kNY7-cbl0BhN5d78dsivrlNGiVDHz1tmJXzefb
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
 
 [everon.com]
 match = -113.6%%
@@ -49,7 +49,7 @@ url = https://everonminhkhai.com/product-category/dem/tam-trai-topper/
 [www.lazada.vn]
 match = -77.3%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoo7O7QSU5gu-VZmIsYzH13Y0ZuibI6lsaDtzQwRjW8nUWpvuJj5
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [kbedding.vn]
 match = 50.0%%
@@ -57,9 +57,9 @@ title = Tấm trải / Topper - K-Bedding
 url = https://kbedding.vn/danh-muc/nem/tam-trải-topper/
 
 [dailyeveron.vn]
-match = 59.1%%
-title = Tấm Trải Mát Cool Pad EVERON
-url = https://dailyeveron.vn/phu-kien-dem/tam-trai-mat-cool-pad-everon.html
+match = -45.5%%
+title = Tấm Trải Văn Phòng EVERON, tấm trải tiện ích Everon
+url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 31.8%%
