--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-06 20:44:01
+lastsearch = 2024-08-06 21:56:55
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -200.0%%
 title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOoq9Q19SVfOPnXEQm5uXDCMzXH3FpeDa2YLmIQY4fshOiWBAmbjM
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
 match = -91.7%%
