--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-06 22:25:19
+lastsearch = 2024-08-06 23:29:24
 
 [everon.online]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn bốn mùa Hoa Ngọt Ngào - ESM24015 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Bảng giá bán lẻ chăn bốn mùa Everon
-url = https://everonvn.com.vn/51/chan-bon-mua-everon
+match = 28.0%%
+title = Báo giá chăn 4 mùa Everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -96.0%%
-title = Vở bài tập Toán lớp 5 - trang 69, 70 - Bài 136: Luyện tập ...
-url = https://www.youtube.com/watch?v=U84zJdnzJak
+match = -100.0%%
+title = Vở Bài Tập Tiếng Việt Lớp 2 | Ôn Tập Giữa Học Kì 2 | Tuần 27 ...
+url = https://www.youtube.com/watch?v=3c3xQJ1BOgM
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -16.0%%
-title = CHỢ CƯ DÂN VINHOMES OCEAN PARK @ | ✅ ...
-url = https://m.facebook.com/groups/357588832255775/posts/1215578123123504/
+match = -48.0%%
+title = CHUNG CƯ VINHOMES OCEAN PARK (Mua bán & Cho ...
+url = https://m.facebook.com/groups/422304615073493/posts/1479220632715214/
 
 [dantri.com.vn]
 match = -60.0%%
