--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-06 22:16:02
+lastsearch = 2024-08-06 23:31:09
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,17 +19,17 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOopXvdXJNq18fLDu9vmFaQIIyfSz0Ga14uRgV3A7Jp4xi21_7kdz
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16?srsltid=AfmBOooderc3J2QY06qTuIgiGju0U5Qhfv0GZJ6qrNmCEldkKbKLidbD
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
-match = -90.5%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22051
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc51
+match = -71.4%%
+title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
+url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [everonletrongtan.com]
 match = 19.0%%
