--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-06 20:35:29
+lastsearch = 2024-08-06 23:26:15
 
 [tiki.vn]
 match = -133.3%%
 title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
-url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=160423870
+url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=72012337/
 
 [joliefam.vn]
 match = -140.0%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
 url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 
 [www.lazada.vn]
-match = -166.7%%
-title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+match = -153.3%%
+title = Chăn lông cừu ULTIMATE xuất Mỹ 2x2,3m loại 1 màu ...
+url = https://www.lazada.vn/products/chan-long-cuu-ultimate-xuat-my-2x23m-loai-1-mau-colorful-mau-moi-nhat-i796256899.html?srsltid=AfmBOooQOzcvwrw0ui4Bz7gf-EBERqZr7okuATiZlefv7sC7FyTxRe-L
 
 [tokyolife.vn]
 match = -193.3%%
@@ -32,9 +32,9 @@ title = Chăn Lông Cừu Đại Hàn Loại 1 dày nặng 2.5kg Siêu Ấm
 url = https://trandungmart.vn/chan-long-cuu-dai-han-loai-1-day-nang-2-5kg-sieu-am
 
 [lasantevn.com]
-match = -200.0%%
-title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasante
-url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
+match = -193.3%%
+title = Các loại chăn lông cừu: Sản phẩm nào được tin dùng nhất?
+url = https://lasantevn.com/cac-loai-chan-long-cuu/
 
 [shopee.vn]
 match = -173.3%%
@@ -170,4 +170,9 @@ url = https://www.sayweee.com/vi/grocery-near-me/vietnamese-lang/explore/chan-cu
 match = -40.0%%
 title = Chăn lông cừu Ruby 210*240 - KN4
 url = https://hanvico.com.vn/san-pham/chan-long-cuu-ruby-210240-kn4/
+
+[www.hotdeal.vn]
+match = -60.0%%
+title = Chăn Lông Cừu Cao Cấp Loại 2,8kg Hà Nội
+url = https://www.hotdeal.vn/ha-noi/gia-dung/chan-long-cuu-cao-cap-loai-2-8-kg-198122.html?srsltid=AfmBOoo8uvPx1AvkfqxPdW67Fm3Ohdj1rz7FNmsf8Dzq9-T6lgMtSHoa
 
