--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-06 17:47:10
+lastsearch = 2024-08-06 23:23:10
 
 [shopee.vn]
 match = 0.0%%
@@ -37,14 +37,14 @@ title = 14/06 VỀ HÀNG. CHIẾU ĐIỀU HOÀ MÁT LẠNH COCO 1.6M X ...
 url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-162m-194k-182m-204k-11506.htm
 
 [demxanh.com]
-match = -40.0%%
-title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
-url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
+match = -28.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = 16.0%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = -20.0%%
+title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
 
 [goni.vn]
 match = 8.0%%
