--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-06 22:18:06
+lastsearch = 2024-08-06 23:16:00
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -750,4 +750,9 @@ url = https://stockbiz.vn/tin-tuc/gia-vang-chieu-nay-682024-gia-vang-mieng-truot
 match = -125.0%%
 title = Mua bán đất nền dự án tại Golden Hills City
 url = https://batdongsan.com.vn/ban-dat-nen-du-an-golden-hills-city
+
+[futaexpress.vn]
+match = -62.5%%
+title = Chuyển phát nhanh Phương Trang ...
+url = https://futaexpress.vn/chi-nhanh
 
